Revert "Fix cut off hover effect in table by removing padding of container"
This reverts commit e63a640f226fd87d0e2ece1838a3ce8efe63b268.

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ footer {
 .container {
   margin-top: 5px;
   margin-bottom: 5px;
+  padding: 30px;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
@@ -150,7 +151,7 @@ tr {
 
 tr:hover {
 	opacity: 0.8;
-	/* transform: scale(1.05); */
+	transform: scale(1.05);
 }
 
 
